--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
+
+<!DOCTYPE html>
+<html>
+<head>
+  <link rel ="stylesheet" href = "lilseb.css">
+  <script src = "myScript.js"></script>
+
 </head>
 
 <body>
 
 
 
-  <!-- <h1> Li'l Sebastian Memorial Web page </h1 > -->
+<h1> Li'l Sebastian Memorial Web page </h1 >
   <p>   <strong> PAWNEE NEWS:
       <img
       alt= "gif of horse and pony"
       src = "http://www.netanimations.net/horse_and_foal_md_clr.gif"
-      />
+    />
     </p> </strong> <img
     alt= "Image of the front page of The Pawnee Journal"
     src = "http://img4.wikia.nocookie.net/__cb20111122175217/parksandrecreation/images/7/7b/PawneeJournalMemorial.jpg"
